--- a/Clases/Clase1/Clase_1_01_variables_y_tipos_de_datos.ipynb
+++ b/Clases/Clase1/Clase_1_01_variables_y_tipos_de_datos.ipynb
@@ -6,6 +6,7 @@
       "name": "Clase_1_01_variables_y_tipos_de_datos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/majorquev/DBDC_202106_Programacion_en_R_para_ciencia_de_datos/blob/main/Clases/Clase1/Clase_1_01_variables_y_tipos_de_datos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/HGMGeografo/DBDC_202106_Programacion_en_R_para_ciencia_de_datos/blob/main/Clases/Clase1/Clase_1_01_variables_y_tipos_de_datos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -103,7 +104,7 @@
         "\n",
         "1+1"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,7 +155,7 @@
         "# Podemos definir distintas variables\n",
         "texto <- \"Esto es una frase\"\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +184,7 @@
         "class(texto)\n",
         "typeof(texto)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -229,7 +230,7 @@
         "x <- 6.5\n",
         "y <- 85"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +246,7 @@
       "source": [
         "x\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +282,7 @@
         "x^y\n",
         "y-x"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,7 +360,7 @@
         "verdad <- TRUE\n",
         "falso <- FALSE"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +377,7 @@
         "verdad & falso \n",
         "verdad | falso"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -427,7 +428,7 @@
         "3 == 5\n",
         "7 == 7"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -481,7 +482,7 @@
         "# Podemos asignar con la flechita en los dos sentidos\n",
         "valor1 <- 10+5"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -514,7 +515,7 @@
       "source": [
         "valor1"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -542,7 +543,7 @@
       "source": [
         "10+8 -> valor2"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +559,7 @@
       "source": [
         "valor2"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -605,7 +606,7 @@
         "2 >= -10\n",
         "8 < -1"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +660,7 @@
         "\n",
         "80000000 > Inf"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -742,7 +743,7 @@
         "# coercionamos a clase date\n",
         "fecha <- as.Date(no_fecha)\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +793,7 @@
         "fecha\n",
         "class(fecha)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -841,7 +842,7 @@
       "source": [
         "no_fecha + 30"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -866,7 +867,7 @@
       "source": [
         "fecha + 30"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,7 +902,7 @@
         "no_fecha2 <- \"09.06.2021\"\n",
         "as.Date(no_fecha2) # El formato no lo lee correctamente\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -925,7 +926,7 @@
       "source": [
         "?as.Date"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -941,7 +942,7 @@
       "source": [
         "as.Date(no_fecha2, format = \"%d.%m.%Y\")"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -971,7 +972,7 @@
         "x <- 10\n",
         "\n"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,7 +983,7 @@
       "source": [
         "y <- x"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +999,7 @@
       "source": [
         "y"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1026,7 +1027,7 @@
       "source": [
         "x <- 11"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1042,7 +1043,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1080,7 +1081,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1127,7 +1128,7 @@
       "source": [
         "ls() # retorna un vector con los nombres de todas las variables definidas en el ambiente\n"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1162,7 +1163,7 @@
         "# remueva algunas de las variables generadas anteriormente\n",
         "rm(no_fecha)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,7 +1179,7 @@
       "source": [
         "ls()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1213,7 +1214,7 @@
         "# Podemos remover mas de una\n",
         "rm(list = c(\"falso\", \"valor1\",\"x\") )"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1229,7 +1230,7 @@
       "source": [
         "ls()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1284,7 +1285,7 @@
         "-Inf # Infinito negativo\n",
         "\n"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1365,7 +1366,7 @@
       "source": [
         "0/0"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1399,7 +1400,7 @@
         "# para identificar un valor NA o NaN podemos utilizar la función is.na\n",
         "4 >= -10\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1432,7 +1433,7 @@
       "source": [
         "3 == 3"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1465,7 +1466,7 @@
       "source": [
         "3 == 4"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1498,7 +1499,7 @@
       "source": [
         "3 == NA"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1531,7 +1532,7 @@
       "source": [
         "NA == NA"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1564,7 +1565,7 @@
       "source": [
         "is.na(3)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1597,7 +1598,7 @@
       "source": [
         "is.na(NA)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1630,7 +1631,7 @@
       "source": [
         "NaN == NaN"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1663,7 +1664,7 @@
       "source": [
         "is.nan(NaN)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1696,7 +1697,7 @@
       "source": [
         "is.na(NaN)"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1729,7 +1730,7 @@
       "source": [
         "is.nan(NA)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1762,7 +1763,7 @@
       "source": [
         "NULL # No es un tipo de dato, sino que es un objeto vacío."
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1790,7 +1791,7 @@
       "source": [
         "is.null(NULL)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1823,7 +1824,7 @@
       "source": [
         "NULL == NULL"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1851,7 +1852,7 @@
       "source": [
         "x <- NULL"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1867,7 +1868,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
